--- a/ClotheOurKids.Web/Views/Home/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Home/Index.cshtml
@@ -287,7 +287,7 @@
                 $('#navbar').removeClass('navbar-light').addClass('navbar-dark');
             }
             else {            
-                $('#navbar').removeClass('navbar-light').addClass('navbar-light');
+                $('#navbar').removeClass('navbar-dark').addClass('navbar-light');
             }
         }       
 
