--- a/ClotheOurKids.Web/Content/css/myHeader.css
+++ b/ClotheOurKids.Web/Content/css/myHeader.css
@@ -88,6 +88,11 @@ header .column-two {
     display: none;
 }
 
+.mm-menu.mm-hoverselected .mm-listview > li > a:hover:not(.mm-fullsubopen), .mm-menu.mm-hoverselected .mm-listview > li > a:hover {
+    background-color: #f44336;
+    color: rgba(255, 255, 255, 0.75);
+}
+
 @media (max-width: 992px) and (min-width: 768px) {
     .header-cta-buttons a.btn-rounded {
         font-size: 24px;
