--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -214,7 +214,8 @@
                 ],
                 setSelected: {
                     "hover": true
-                }
+                },
+                navbars: []
             }, {
                 //configuration
                 offCanvas: {
