--- a/ClotheOurKids.Web/Views/AboutUs/WhatWeDo.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhatWeDo.cshtml
@@ -1,23 +1,31 @@
 ﻿<div class="container">
 
-    <section class="section section-blog-fw">
-        
+    <section class="section page-top-section wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
-            <div class="col-md-12 wow fadeIn" data-wow-delay="0.2s">
-                
-                <!--Featured Image-->
-                <div class="view hm-black-light">
-                    <img src="~/Content/img/ClotheOurKids/COKTrailer-2.jpg" class="img-fluid" alt="" />
-                    <div class="mask flex-center"></div>
-                </div>
+            <div class="col-12">
+                <h1 class="section-heading">What We Do</h1>
+            </div>
+            <div class="col-12">
+                <p class="section-description"><i><strong>giving</strong> clothes, <strong>showing</strong> love, <strong>building</strong> confidence</i></p>
+            </div>
+            <div class="col-12" style="text-align:center;">
+                <span>Share</span>
+                <!--Facebook-->
+                <a type="button" class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"></i></a>
 
-                <!--Page Description-->
-                <div class="jumbotron wow fadeIn" data-wow-delay="0.4s">
-                    <h1 class="h1-responsive">What We Do</h1>
-                    <p><strong>Giving</strong> Clothes, <strong>Showing</strong> Love, <strong>Building</strong> Confidence</p>                 
-                </div>
+                <!--Twitter-->
+                <a type="button" class="btn-floating btn-small btn-tw"><i class="fa fa-twitter"></i></a>
+
+                <!--Pinterest-->
+                <a type="button" class="btn-floating btn-small btn-pin"><i class="fa fa-pinterest"></i></a>
+
+                <!--Email-->
+                <a type="button" class="btn-floating btn-small btn-email"><i class="fa fa-envelope"></i></a>
             </div>
         </div>
+        
+        
+
     </section>
     
     <hr class="between-sections">
