--- a/ClotheOurKids.Web/Views/Home/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Home/Index.cshtml
@@ -63,6 +63,13 @@
                 height: calc(100vh - 163px);
             }
         }
+
+        @@media (min-width: 1200px) {
+            .logo-container {
+                background: url("../../Content/img/logo/ClotheOurKidsLogo_withMC_Scaled_whiteText.png") left top no-repeat !important;
+            }
+        }
+
 </style>
 }
 
