--- a/ClotheOurKids.Web/Content/css/myHeader.css
+++ b/ClotheOurKids.Web/Content/css/myHeader.css
@@ -2,17 +2,16 @@
 header .logo {
     display: block;
     float: left;
+    box-sizing: border-box;
     z-index: 100;
 }
 
 header .logo-container {
     display: block;
+    width: 200px;
+    height: 86px;
+    background: url("../../Content/img/logo/ClotheOurKidsLogo_withMC_Scaled.png") left top no-repeat;
 }
-
-    header .logo-container img {
-        width: 200px;
-        height: 86px;
-    }
 
 header {
     box-shadow: 0 4px 4px -4px #898989;
