--- a/ClotheOurKids.Web/Views/AboutUs/WhatWeDo.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhatWeDo.cshtml
@@ -1,6 +1,6 @@
-﻿<div class="container">
+﻿<div class="container-fluid">
 
-    <section class="section page-top-section wow fadeIn" data-wow-delay="0.2s">
+    <section class="section page-top-section mb-4 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
             <div class="col-12">
                 <h1 class="section-heading">What We Do</h1>
@@ -22,16 +22,15 @@
                 <!--Email-->
                 <a type="button" class="btn-floating btn-small btn-email"><i class="fa fa-envelope"></i></a>
             </div>
-        </div>
-        
-        
-
+        </div>   
     </section>
     
-    <hr class="between-sections">
+    <div class="streak streak-lg streak-photo img-responsive" style="background-image:url('../../Content/img/ClotheOurKids/Love_Shirt.jpg');">
+    </div>
+
 
     <!--Section: Our Mission-->
-    <section class="section" id="OurMission">
+    <section class="section mt-4" id="OurMission">
         <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">Our Mission</h1>
 
         <p class="section-description wow fadein" data-wow-delay="0.4s">
